--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>Cat and Dog</title>
+    <link rel="icon" id="site-icon" href="primeiro-icone.png" type="image/png">
+
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script url="script.js"></script>
+   
   </head>
   <body>
     <div id="container">
@@ -16,8 +18,14 @@
       <div class="botao" id="button-container-dog">
         <button id="generate-button-dog">Doguiiinho!!!</button>
       </div>
-    </div> 
+<section id="download-section">
+  <h2>Downloads</h2>
+  <a id="download-link-cat" href="#" download target="_blank">Download imagem do CAT</a>
+  <a id="download-link-dog" href="#" download target="_blank">Download imagem do DOG</a>
+</section>
 
+    </div> 
+   <script src="script.js"></script>
 
   </body>
 </html>
